--- a/index.html
+++ b/index.html
@@ -7,165 +7,185 @@
     <title>WEBSTUDOI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- heder -->
     <header>
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-style">Studio</span></a
-        >
+      <div class="conteiner">
+        <nav>
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-style">Studio</span></a
+          >
 
-        <ul class="list">
-          <li><a href="./index.html" class="nav-link link">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-          </li>
-          <li><a href="" class="nav-link link">Contacts</a></li>
-        </ul>
-      </nav>
+          <ul class="list">
+            <li><a href="./index.html" class="nav-link link">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
+            <li><a href="" class="nav-link link">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <address class="concacts">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts-list link"
-              >info@devstudio.com</a
-            >
-          </li>
+        <address class="concacts">
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts-list link"
+                >info@devstudio.com</a
+              >
+            </li>
 
-          <li>
-            <a href="tel:+110001111111" class="contacts-list link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <li>
+              <a href="tel:+110001111111" class="contacts-list link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- section-1  Оffer-->
       <section class="hero-section">
-        <h1 class="hero-titel">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="conteiner">
+          <h1 class="hero-titel">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
 
       <!-- section-2  Оur Advantages-->
       <section class="advantages-section">
-        <h2 hidden class="visually-hidden">Our advantages</h2>
-        <ul class="list">
-          <li>
-            <h3 class="sub-titel-text-styles">Strategy</h3>
-            <p class="mein-text-style">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="sub-titel-text-styles">Punctuality</h3>
-            <p class="mein-text-style">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="sub-titel-text-styles">Diligence</h3>
-            <p class="mein-text-style">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="sub-titel-text-styles">Technologies</h3>
-            <p class="mein-text-style">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="conteiner">
+          <h2 hidden class="visually-hidden">Our advantages</h2>
+          <ul class="list">
+            <li>
+              <h3 class="sub-titel-text-styles">Strategy</h3>
+              <p class="mein-text-style">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="sub-titel-text-styles">Punctuality</h3>
+              <p class="mein-text-style">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="sub-titel-text-styles">Diligence</h3>
+              <p class="mein-text-style">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="sub-titel-text-styles">Technologies</h3>
+              <p class="mein-text-style">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- section-3 Our Works  -->
       <section class="work-section">
-        <h2 class="title-tex-style">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/work-1.jpg"
-              alt="computer with open website"
-              width="360"
-              height="300"
-            />
-          </li>
+        <div class="conteiner">
+          <h2 class="title-tex-style">What are we doing</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/work-1.jpg"
+                alt="computer with open website"
+                width="360"
+                height="300"
+              />
+            </li>
 
-          <li>
-            <img
-              src="./images/work-2.jpg"
-              alt="mobile app"
-              width="360"
-              height="300"
-            />
-          </li>
+            <li>
+              <img
+                src="./images/work-2.jpg"
+                alt="mobile app"
+                width="360"
+                height="300"
+              />
+            </li>
 
-          <li>
-            <img
-              src="./images/work-3.jpg"
-              alt="mobile in hand"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+            <li>
+              <img
+                src="./images/work-3.jpg"
+                alt="mobile in hand"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- section-4 Team -->
       <section class="team-section">
-        <h2 class="title-tex-style">Our Team</h2>
-        <ul class="card-list list">
-          <li class="card-item">
-            <img
-              src="./images/team-1.jpg"
-              alt="man with beard and shirt"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-titel-text-styles">Mark Guerrero</h3>
-            <p class="mein-text-style">Product Designer</p>
-          </li>
-          <li class="card-item">
-            <img
-              src="./images/team-2.jpg"
-              alt="young man in a shirt"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-titel-text-styles">Tom Ford</h3>
-            <p class="mein-text-style">Frontend Developer</p>
-          </li>
-          <li class="card-item">
-            <img
-              src="./images/team-3.jpg"
-              alt="young girl in a pink sweater"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-titel-text-styles">Camila Garcia</h3>
-            <p class="mein-text-style">Marketing</p>
-          </li>
-          <li class="card-item">
-            <img
-              src="./images/team-4.jpg"
-              alt="young guy in a gray t-shirt"
-              width="264"
-              height="260"
-            />
-            <h3 class="sub-titel-text-styles">Daniel Wilson</h3>
-            <p class="mein-text-style">UI Designer</p>
-          </li>
-        </ul>
+        <div class="conteiner">
+          <h2 class="title-tex-style">Our Team</h2>
+          <ul class="card-list list">
+            <li class="card-item">
+              <img
+                src="./images/team-1.jpg"
+                alt="man with beard and shirt"
+                width="264"
+                height="260"
+              />
+              <h3 class="sub-titel-text-styles">Mark Guerrero</h3>
+              <p class="mein-text-style">Product Designer</p>
+            </li>
+            <li class="card-item">
+              <img
+                src="./images/team-2.jpg"
+                alt="young man in a shirt"
+                width="264"
+                height="260"
+              />
+              <h3 class="sub-titel-text-styles">Tom Ford</h3>
+              <p class="mein-text-style">Frontend Developer</p>
+            </li>
+            <li class="card-item">
+              <img
+                src="./images/team-3.jpg"
+                alt="young girl in a pink sweater"
+                width="264"
+                height="260"
+              />
+              <h3 class="sub-titel-text-styles">Camila Garcia</h3>
+              <p class="mein-text-style">Marketing</p>
+            </li>
+            <li class="card-item">
+              <img
+                src="./images/team-4.jpg"
+                alt="young guy in a gray t-shirt"
+                width="264"
+                height="260"
+              />
+              <h3 class="sub-titel-text-styles">Daniel Wilson</h3>
+              <p class="mein-text-style">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
