--- a/portfolio.html
+++ b/portfolio.html
@@ -24,12 +24,12 @@
   <body>
     <!-- heder -->
     <header>
-      <nav class="conteiner">
+      <nav>
         <a href="./index.html" class="logo link"
           >Web<span class="logo-style">Studio</span></a
         >
 
-        <ul class="list">
+        <ul>
           <li><a href="./index.html" class="nav-link link">Studio</a></li>
           <li>
             <a href="./portfolio.html" class="nav-link link">Portfolio</a>
@@ -39,7 +39,7 @@
       </nav>
 
       <address class="concacts">
-        <ul class="list">
+        <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-list link"
               >info@devstudio.com</a
@@ -60,7 +60,7 @@
       <section>
         <h1 hidden class="visually-hidden">Portfolio</h1>
 
-        <ul class="list">
+        <ul>
           <li><button type="button" class="portfolio-btn">All</button></li>
 
           <li>
@@ -80,7 +80,7 @@
           </li>
         </ul>
 
-        <ul class="list">
+        <ul>
           <li class="portfolio-list">
             <a href="" class="link">
               <img
