--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advant-list">
-            <li>
+            <li class="advant-item">
               <h3 class="sub-titel-text-styles">Strategy</h3>
               <p class="mein-text-style">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="advant-item">
               <h3 class="sub-titel-text-styles">Punctuality</h3>
               <p class="mein-text-style">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="advant-item">
               <h3 class="sub-titel-text-styles">Diligence</h3>
               <p class="mein-text-style">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="advant-item">
               <h3 class="sub-titel-text-styles">Technologies</h3>
               <p class="mein-text-style">
                 Design practice focused on digital experiences. We bring forth a
@@ -201,13 +201,17 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="footer-logo-style">Studio</span></a
-      >
-      <p class="footer-text mein-text-style">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-container">
+          <a href="./index.html" class="logo link"
+            >Web<span class="footer-logo-style">Studio</span></a
+          >
+          <p class="footer-text mein-text-style">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
