--- a/portfolio.html
+++ b/portfolio.html
@@ -24,193 +24,222 @@
   <body>
     <!-- heder -->
     <header>
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-style">Studio</span></a
-        >
+      <div class="container head-nav">
+        <nav class="nav-list">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-style">Studio</span></a
+          >
 
-        <ul>
-          <li><a href="./index.html" class="nav-link link">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-          </li>
-          <li><a href="" class="nav-link link">Contacts</a></li>
-        </ul>
-      </nav>
+          <ul class="nav-item">
+            <li><a href="./index.html" class="nav-link link">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
+            <li><a href="" class="nav-link link">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <address class="concacts">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts-list link"
-              >info@devstudio.com</a
-            >
-          </li>
+        <address class="concacts">
+          <ul class="contacts-item">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts-list link"
+                >info@devstudio.com</a
+              >
+            </li>
 
-          <li>
-            <a href="tel:+110001111111" class="contacts-list link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <li>
+              <a href="tel:+110001111111" class="contacts-list link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- Portfolio -->
       <section>
-        <h1 hidden class="visually-hidden">Portfolio</h1>
+        <div class="container">
+          <h1 class="visually-hidden">Portfolio</h1>
 
-        <ul>
-          <li><button type="button" class="portfolio-btn">All</button></li>
+          <ul class="btn-container">
+            <li><button type="button" class="portfolio-btn">All</button></li>
 
-          <li>
-            <button type="button" class="portfolio-btn">Web Site</button>
-          </li>
+            <li>
+              <button type="button" class="portfolio-btn">Web Site</button>
+            </li>
 
-          <li>
-            <button type="button" class="portfolio-btn">App</button>
-          </li>
+            <li>
+              <button type="button" class="portfolio-btn">App</button>
+            </li>
 
-          <li>
-            <button type="button" class="portfolio-btn">Design</button>
-          </li>
+            <li>
+              <button type="button" class="portfolio-btn">Design</button>
+            </li>
 
-          <li>
-            <button type="button" class="portfolio-btn">Marketing</button>
-          </li>
-        </ul>
+            <li>
+              <button type="button" class="portfolio-btn">Marketing</button>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/app-1.jpg"
+                  alt="banking application image"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-portfolio-text">
+                  <h2 class="sub-titel-text-styles">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="mein-text-style">App</p>
+                </div>
+              </a>
+            </li>
 
-        <ul>
-          <li class="portfolio-list">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/app-1.jpg"
-                alt="banking application image"
-                width="360"
-                height="300"
-              />
-              <h2 class="sub-titel-text-styles">
-                Banking App Interface Concept
-              </h2>
-              <p class="mein-text-style">App</p>
-            </a>
-          </li>
+            <li class="portfolio-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/portfolio/marketing-1.jpg"
+                  alt="phone scanning qr code"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-portfolio-text">
+                  <h2 class="sub-titel-text-styles">Cashless Payment</h2>
+                  <p class="mein-text-style">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio/marketing-1.jpg"
-                alt="phone scanning qr code"
-                width="360"
-                height="300"
-              />
-              <h2 class="sub-titel-text-styles">Cashless Payment</h2>
-              <p class="mein-text-style">Marketing</p>
-            </a>
-          </li>
+            <li class="portfolio-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/portfolio/app-2.jpg"
+                  alt="laptop and phone"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-portfolio-text">
+                  <h2 class="sub-titel-text-styles">Meditation App</h2>
+                  <p class="mein-text-style">App</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="portfolio-list">
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio/app-2.jpg"
-                alt="laptop and phone"
-                width="360"
-                height="300"
-              />
-              <h2 class="sub-titel-text-styles">Meditation App</h2>
-              <p class="mein-text-style">App</p>
-            </a>
-          </li>
+            <li class="portfolio-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/portfolio/marketing-2.jpg"
+                  alt="man driving a car"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-portfolio-text">
+                  <h2 class="sub-titel-text-styles">Taxi Service</h2>
+                  <p class="mein-text-style">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="portfolio-list">
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio/marketing-2.jpg"
-                alt="man driving a car"
-                width="360"
-                height="300"
-              />
-              <h2 class="sub-titel-text-styles">Taxi Service</h2>
-              <p class="mein-text-style">Marketing</p>
-            </a>
-          </li>
+            <li class="portfolio-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/portfolio/design-1.jpg"
+                  alt="beautiful theme for phone"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-portfolio-text">
+                  <h2 class="sub-titel-text-styles">Screen Illustrations</h2>
+                  <p class="mein-text-style">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="portfolio-list">
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio/design-1.jpg"
-                alt="beautiful theme for phone"
-                width="360"
-                height="300"
-              />
-              <h2 class="sub-titel-text-styles">Screen Illustrations</h2>
-              <p class="mein-text-style">Design</p>
-            </a>
-          </li>
+            <li class="portfolio-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/portfolio/marketing-3.jpg"
+                  alt="happy girl"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-portfolio-text">
+                  <h2 class="sub-titel-text-styles">Online Courses</h2>
+                  <p class="mein-text-style">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="portfolio-list">
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio/marketing-3.jpg"
-                alt="happy girl"
-                width="360"
-                height="300"
-              />
-              <h2 class="sub-titel-text-styles">Online Courses</h2>
-              <p class="mein-text-style">Marketing</p>
-            </a>
-          </li>
+            <li class="portfolio-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/portfolio/design-2.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-portfolio-text">
+                  <h2 class="sub-titel-text-styles">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="mein-text-style">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="portfolio-list">
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio/design-2.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="sub-titel-text-styles">Instagram Stories Concept</h2>
-              <p class="mein-text-style">Design</p>
-            </a>
-          </li>
+            <li class="portfolio-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/portfolio/website-1.jpg"
+                  alt="girl with fresh vegetables"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-portfolio-text">
+                  <h2 class="sub-titel-text-styles">Organic Food</h2>
+                  <p class="mein-text-style">Web Site</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="portfolio-list">
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio/website-1.jpg"
-                alt="girl with fresh vegetables"
-                width="360"
-                height="300"
-              />
-              <h2 class="sub-titel-text-styles">Organic Food</h2>
-              <p class="mein-text-style">Web Site</p>
-            </a>
-          </li>
-
-          <li class="portfolio-list">
-            <a href="" class="link"
-              ><img
-                src="./images/portfolio/website-2.jpg"
-                alt="freshly made coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="sub-titel-text-styles">Fresh Coffee</h2>
-              <p class="mein-text-style">Web Site</p>
-            </a>
-          </li>
-        </ul>
+            <li class="portfolio-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/portfolio/website-2.jpg"
+                  alt="freshly made coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-portfolio-text">
+                  <h2 class="sub-titel-text-styles">Fresh Coffee</h2>
+                  <p class="mein-text-style">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="footer-logo-style">Studio</span></a
-      >
-      <p class="footer-text mein-text-style">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-container">
+          <a href="./index.html" class="logo link"
+            >Web<span class="footer-logo-style">Studio</span></a
+          >
+          <p class="footer-text mein-text-style">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
