--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
         </nav>
 
-        <address class="concacts">
+        <address class="contacts">
           <ul class="contacts-item">
             <li>
               <a href="mailto:info@devstudio.com" class="contacts-list link"
@@ -108,7 +108,7 @@
       <!-- section-3 Our Works  -->
       <section class="work-section">
         <div class="container">
-          <h2 class="Work-title title-tex-style">What are we doing</h2>
+          <h2 class="work-title title-tex-style">What are we doing</h2>
           <ul class="work-list">
             <li>
               <img
@@ -202,15 +202,14 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-        <div class="footer-container">
-          <a href="./index.html" class="logo link"
-            >Web<span class="footer-logo-style">Studio</span></a
-          >
-          <p class="footer-text mein-text-style">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a href="./index.html" class="logo footer-logo link"
+          >Web<span class="footer-logo-style">Studio</span>
+        </a>
+
+        <p class="footer-text mein-text-style">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
