--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
 
-        <address class="concacts">
+        <address class="contacts">
           <ul class="contacts-item">
             <li>
               <a href="mailto:info@devstudio.com" class="contacts-list link"
@@ -59,7 +59,7 @@
 
     <main>
       <!-- Portfolio -->
-      <section>
+      <section class="portfolio-section">
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
 
@@ -82,8 +82,7 @@
               <button type="button" class="portfolio-btn">Marketing</button>
             </li>
           </ul>
-        </div>
-        <div class="container">
+
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <a href="" class="link">
