--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <!-- heder -->
-    <header>
+    <header class="head">
       <div class="container head-nav">
         <nav class="nav-list">
           <a href="./index.html" class="logo link"
@@ -110,7 +110,7 @@
         <div class="container">
           <h2 class="work-title title-tex-style">What are we doing</h2>
           <ul class="work-list">
-            <li>
+            <li class="work-item">
               <img
                 src="./images/work-1.jpg"
                 alt="computer with open website"
@@ -119,7 +119,8 @@
               />
             </li>
 
-            <li>
+            
+            <li class="work-item">
               <img
                 src="./images/work-2.jpg"
                 alt="mobile app"
@@ -128,7 +129,7 @@
               />
             </li>
 
-            <li>
+            <li class="work-item">
               <img
                 src="./images/work-3.jpg"
                 alt="mobile in hand"
@@ -202,7 +203,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo footer-logo link"
+        <a href="./index.html" class="footer-logo logo  link"
           >Web<span class="footer-logo-style">Studio</span>
         </a>
 
