--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- heder -->
-    <header>
+    <header class="head">
       <div class="container head-nav">
         <nav class="nav-list">
           <a href="./index.html" class="logo link"
@@ -229,15 +229,14 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-        <div class="footer-container">
-          <a href="./index.html" class="logo link"
-            >Web<span class="footer-logo-style">Studio</span></a
-          >
-          <p class="footer-text mein-text-style">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a href="./index.html" class="footer-logo logo  link"
+          >Web<span class="footer-logo-style">Studio</span>
+        </a>
+
+        <p class="footer-text mein-text-style">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
